--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 </head>
 <body>
   <div class="disclaimer">
-    <img class="disclaimer__img" src="img/img.png">
+    <img class="disclaimer__img" src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
     <h3 class="disclaimer__text"> Hello, I'm Jenia </h3>
     <p class="disclaimer__text">
       <a href="mailto:lalala@emai.com"> lalala@email.com </a>
     </p>
   </div>
   <div class="content">
-    <img src="img/img.png">
-    <img src="img/img.png">
-    <img src="img/img.png">
-    <img src="img/img.png">
-    <img src="img/img.png">
-    <img src="img/img.png">
-    <img src="img/img.png">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
+    <img src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
   </div>
 </body>
 </html>
