--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </div>
   <div class="content">
     <img src="img/5.jpg">
+    <img src="img/13.jpg">
     <img src="img/6.jpg">
     <img src="img/7.jpg">
     <img src="img/9.jpg">
