Ready for public

--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 <head>
   <title> jenia </title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='http://fonts.googleapis.com/css?family=Neucha&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <meta charset="utf8" />
 </head>
 <body>
   <div class="disclaimer">
-    <img class="disclaimer__img" src="http://fc01.deviantart.net/fs25/f/2008/109/f/7/TPop_Blizz_Warcraft_Promo_by_UdonCrew.jpg">
-    <h3 class="disclaimer__text"> Hello, I'm Jenia </h3>
+    <img class="disclaimer__img" src="img/me.png">
+    <h3 class="disclaimer__text"> Художник-иллюстратор. </h3>
     <p class="disclaimer__text">
-      <a href="mailto:lalala@emai.com"> lalala@email.com </a>
+      <a href="mailto:imamammont@gmail.com"> imamammont@gmail.com </a>
     </p>
   </div>
   <div class="content">
-    <img src="img/5.jpg">
-    <img src="img/13.jpg">
-    <img src="img/6.jpg">
-    <img src="img/7.jpg">
-    <img src="img/9.jpg">
-    <img src="img/12.jpg">
-    <img src="img/4.jpg">
-    <img src="img/3.jpg">
-    <img src="img/1.jpg">
-    <img src="img/2.jpg">
-    <img src="img/8.jpg">
-    <img src="img/10.jpg">
-    <img src="img/11.jpg">
+    <img class="img_13" src="img/13.jpg">
+    <img class="img_5" src="img/5.jpg">
+    <img class="img_6" src="img/6.jpg">
+    <img class="img_7" src="img/7.jpg">
+    <img class="img_9" src="img/9.jpg">
+    <img class="img_12" src="img/12.jpg">
+    <img class="img_4" src="img/4.jpg">
+    <img class="img_3" src="img/3.jpg">
+    <img class="img_1" src="img/1.jpg">
+    <img class="img_2" src="img/2.jpg">
+    <img class="img_8" src="img/8.jpg">
+    <img class="img_10" src="img/10.jpg">
+    <img class="img_11" src="img/11.jpg">
   </div>
 </body>
 </html>
